tests/NormalTests/paczka1/fuzzy1/51538375.err
Error in line 3: VrpRJ S695 22,7
Error in line 5: VrpRJ S987 61,0
Error in line 6: VrpRJ S695 63,5
Error in line 7: XMY0QSjy7 S695 54,9
Error in line 19: cwX2rkM S695 "6,6
Error in line 16: cwX2rkM S65 2,8
Error in line 22: cwX2rkM S695 133,6
Error in line 35: A883 S695 68,,
Error in line 28: XMY0QSjy7 S65 34,3
